[FEAT]: Rest API for associatedJobs
